fix publication collapse in safari

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -118,7 +118,7 @@ body.about a.about {
 }
 
 .publication-wrapper {
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 .publications p {
@@ -150,6 +150,11 @@ body.about a.about {
   margin: 3rem 0 -1.2rem -3.5rem;
   text-align: left;
   font-size: 1.6rem;
+}
+
+.spacer {
+  position: relative;
+  top: 22px;
 }
 
 /******************* CV ******************/
